# CarlsGarage

./: CMakeLists.txt  Makefile  README.md  dontuse  profile_run  run.sh  run_tests
logger/: a.out  logger.c  logger.h  logger_test.c  lt  throttled.h
src/allegro_demo/: main.c
src/logger/: l  logger.c  logger.h  logger_test.c  test
src/profiler/: profiler.c  profiler.h
tests/: log_main.cpp  test_logger.cpp
